--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,9 +2,11 @@ name: Playwright Tests
 
 on:
   push:
-    branches: [main]
+    branches: ['**']
   pull_request:
     branches: [main]
+  schedule:
+    - cron: '30 0 * * *'  # Every day at 6:00 AM IST
 
 jobs:
   test:
