--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -7,6 +7,15 @@ on:
     branches: [main]
   schedule:
     - cron: '30 0 * * *'  # Every day at 6:00 AM IST
+# ┌───────── minute (0 - 59)
+# │ ┌───────── hour (0 - 23, in UTC)
+# │ │ ┌───────── day of the month (1 - 31)
+# │ │ │ ┌───────── month (1 - 12)
+# │ │ │ │ ┌───────── day of the week (0 - 7) (0 or 7 = Sunday)
+# │ │ │ │ │
+# │ │ │ │ │
+# │ │ │ │ │
+# * * * * *
 
 jobs:
   test:
@@ -28,7 +37,7 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Run Playwright tests
-        run: npx playwright test
+        run: npx playwright test --grep @smoke
 
       - name: Upload test results (HTML report)
         if: always()
