--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -3,8 +3,7 @@ name: Playwright Tests
 on:
   push:
     branches: ['**']
-  pull_request:
-    branches: [main]
+
   schedule:
     - cron: '30 0 * * *'  # Every day at 6:00 AM IST
 # ┌───────── minute (0 - 59)
@@ -19,7 +18,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # macos-latest or windows-latest
 
     steps:
       - name: Checkout repository
